--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,16 +46,21 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
 
-    kapt 'io.arrow-kt:arrow-meta:0.11.0'
-    implementation 'io.arrow-kt:arrow-core:0.11.0'
-    implementation 'io.arrow-kt:arrow-fx:0.11.0'
+    kapt 'io.arrow-kt:arrow-meta:0.10.2'
+    implementation 'io.arrow-kt:arrow-core:0.10.2'
+    implementation 'io.arrow-kt:arrow-fx:0.10.2'
+
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 
     testImplementation 'junit:junit:4.13.1'
     testImplementation "io.mockk:mockk:1.10.4"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    testImplementation 'me.jorgecastillo:hiroaki-core:0.1.0'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:0.1.0'
+
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2'
-    testImplementation "io.arrow-kt:arrow-core:0.11.0"
-    testImplementation "io.arrow-kt:arrow-fx:0.11.0"
+    testImplementation "io.arrow-kt:arrow-core:0.10.2"
+    testImplementation "io.arrow-kt:arrow-fx:0.10.2"
 }
