--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     testImplementation 'junit:junit:4.13.1'
     testImplementation "io.mockk:mockk:1.10.4"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
