--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.naibeck.newscorp"
@@ -40,7 +40,7 @@ android {
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.2.71'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.3.72'
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
@@ -51,8 +51,9 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
-    androidTestImplementation 'androidx.test:rules:1.3.0-beta01'
+    androidTestImplementation 'androidx.test:rules:1.3.1-alpha03'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.4.0-alpha03'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-beta01'
 
     kapt 'io.arrow-kt:arrow-meta:0.10.2'
     implementation 'io.arrow-kt:arrow-core:0.10.2'
@@ -64,15 +65,15 @@ dependencies {
 
 
     testImplementation 'junit:junit:4.13.1'
-    testImplementation 'androidx.test:runner:1.2.0'
+    testImplementation 'androidx.test:runner:1.3.0'
     testImplementation "io.mockk:mockk:1.10.4"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     testImplementation 'me.jorgecastillo:hiroaki-core:0.2.3'
     androidTestImplementation 'me.jorgecastillo:hiroaki-android:0.2.3'
-    testImplementation 'com.squareup.okhttp3:mockwebserver:0.1.0'
-    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:0.1.0'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:3.12.0'
+    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:3.12.0'
 
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2'
     androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2'
