--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     androidTestImplementation 'androidx.test:rules:1.3.1-alpha03'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.4.0-alpha03'
     implementation 'androidx.recyclerview:recyclerview:1.2.0-beta01'
